cmake_minimum_required(VERSION 3.8)
add_executable(syscall_write syscall_write.c)
add_executable(fork fork.c)
target_link_libraries(fork LINK_PUBLIC csapp)
add_executable(forkprob0 forkprob0.c)
target_link_libraries(forkprob0 LINK_PUBLIC csapp)
add_executable(waitprob0 waitprob0.c)
target_link_libraries(waitprob0 LINK_PUBLIC csapp)
add_executable(waitpid1 waitpid1.c)
target_link_libraries(waitpid1 LINK_PUBLIC csapp)
add_executable(waitpid2 waitpid2.c)
target_link_libraries(waitpid2 LINK_PUBLIC csapp)
add_executable(waitprob1 waitprob1.c)
target_link_libraries(waitprob1 LINK_PUBLIC csapp)
add_executable(myecho exercise_8.6.c)
add_executable(shellex shellex.c)
target_link_libraries(shellex LINK_PUBLIC csapp)
add_executable(kill kill.c)
target_link_libraries(kill LINK_PUBLIC csapp)
add_executable(sigint sigint.c)
target_link_libraries(sigint LINK_PUBLIC csapp)
add_executable(snooze exercise_8.7.c)
target_link_libraries(snooze LINK_PUBLIC csapp)
add_executable(signal1 signal1.c)
target_link_libraries(signal1 LINK_PUBLIC csapp)
add_executable(signal2 signal2.c)
target_link_libraries(signal2 LINK_PUBLIC csapp)
add_executable(forkprob1 forkprob1.c)
target_link_libraries(forkprob1 LINK_PUBLIC csapp)
add_executable(forkprob3 forkprob3.c)
target_link_libraries(forkprob3 LINK_PUBLIC csapp)
add_executable(forkprob4 forkprob4.c)
target_link_libraries(forkprob4 LINK_PUBLIC csapp)
add_executable(forkprob5 forkprob5.c)
target_link_libraries(forkprob5 LINK_PUBLIC csapp)
add_executable(forkprob6 forkprob6.c)
target_link_libraries(forkprob6 LINK_PUBLIC csapp)
