cmake_minimum_required(VERSION 3.8)
add_executable(cpfile cpfile.c)
target_link_libraries(cpfile LINK_PUBLIC csapp)
add_executable(cpstdin cpstdin.c)
target_link_libraries(cpstdin LINK_PUBLIC csapp)
add_executable(readdir readdir.c)
target_link_libraries(readdir LINK_PUBLIC csapp)
add_executable(statcheck statcheck.c)
target_link_libraries(statcheck LINK_PUBLIC csapp)
add_executable(fstatcheck fstatcheck.c)
target_link_libraries(fstatcheck LINK_PUBLIC csapp)
add_executable(_10.2 _10.2.c)
target_link_libraries(_10.2 LINK_PUBLIC csapp)
add_executable(_10.5 _10.5.c)
target_link_libraries(_10.5 LINK_PUBLIC csapp)
add_executable(_10.6 _10.6.c)
target_link_libraries(_10.6 LINK_PUBLIC csapp)
add_executable(rename rename.c)
target_link_libraries(rename LINK_PUBLIC csapp)
