cmake_minimum_required(VERSION 3.8)
add_executable(hex2dd hex2dd.c)
target_link_libraries(hex2dd LINK_PUBLIC csapp)
add_executable(dd2hex dd2hex.c)
target_link_libraries(dd2hex LINK_PUBLIC csapp)
add_executable(hostinfo hostinfo.c)
target_link_libraries(hostinfo LINK_PUBLIC csapp)
add_executable(hostinfo_v2 hostinfo_v2.c)
target_link_libraries(hostinfo_v2 LINK_PUBLIC csapp)
add_executable(echoclient echoclient.c)
target_link_libraries(echoclient LINK_PUBLIC csapp)
add_executable(echoserveri echoserveri.c)
target_link_libraries(echoserveri LINK_PUBLIC csapp)
